fix(frontend): :lipstick: gap between sections in side panel

--- a/frontend/src/components/CreateEditAlbum/CreateEditAlbum.module.scss
+++ b/frontend/src/components/CreateEditAlbum/CreateEditAlbum.module.scss
@@ -9,6 +9,7 @@
     height: calc(100% - 4rem);
     flex-grow: 0;
     flex-shrink: 0;
+    gap: 3rem;
 
     display: flex;
     flex-direction: column;
